--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "pairs-trading"
 version = "0.1.0"
-description = "Paris Trading Algo using yfinance"
+description = "Pairs Trading Algo using yfinance"
 authors = [
     {name = "Your Name",email = "you@example.com"}
 ]
@@ -13,7 +13,9 @@ dependencies = [
     "pandas (>=2.3.0,<3.0.0)",
     "numpy (>=2.3.0,<3.0.0)",
     "statsmodels (>=0.14.4,<0.15.0)",
-    "matplotlib (>=3.10.3,<4.0.0)"
+    "matplotlib (>=3.10.3,<4.0.0)",
+    "pyyaml (>=6.0.2,<7.0.0)",
+    "tabulate (>=0.9.0,<0.10.0)"
 ]
 
 
