--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,9 @@
 name = "pairs-trading"
 version = "0.1.0"
 description = "Pairs Trading Algo using yfinance"
+packages = [
+  { include = "*.py", from = "." }
+]
 authors = [
     {name = "Your Name",email = "you@example.com"}
 ]
@@ -18,6 +21,8 @@ dependencies = [
     "tabulate (>=0.9.0,<0.10.0)"
 ]
 
+[tool.poetry]
+package-mode = false
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
